--- a/src/components/TextInput/style.css
+++ b/src/components/TextInput/style.css
@@ -1,5 +1,6 @@
 .form__input {
-  padding: .8rem;
+  padding: 0.8rem;
+  margin-right: 2rem;
   outline: none;
   border: none;
   border-bottom: 1px solid rgb(34, 34, 216);
