--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .container {
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
 }
 
-.Text__input__form {
+.container__form {
   display: flex;
-
   justify-content: space-between;
   align-items: center;
   margin-top: 3rem;
