--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -33,3 +33,17 @@
   background-color: greenyellow;
   padding: 0.3rem 1rem;
 }
+
+.footer__icon {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+.arrow__icon {
+  margin-left: 1rem;
+  border: 1px solid black;
+  border-radius: 70%;
+  padding: 0.5rem;
+  background-color: #f2f2f2;
+  cursor: pointer;
+}
