--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -47,3 +47,20 @@
   background-color: #f2f2f2;
   cursor: pointer;
 }
+
+.Sorting {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Th__Sorting {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.Sorting__icon {
+  cursor: pointer;
+  margin: -0.4rem;
+}
